Add back r-box div image

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -104,6 +104,7 @@ details>summary {
   margin-top: 6px;
   border-left: solid 5px #3767B6;
   background: #BBBDC050 5px center/3em no-repeat;
+  background-image: url("images/r-logo.png");
   background-position: 0.5em 1.5em;
 }
 
