R, Python, and code boxes

--- a/style/slides.scss
+++ b/style/slides.scss
@@ -99,21 +99,34 @@ details>summary {
 }
 
 .reveal .slide .r-box {
-  padding: 0.5em 1em 0.5em 1em;
+  padding: 0.5em 1em 0.5em 2.5em;
   margin-bottom: 6px;
   margin-top: 6px;
   border-left: solid 5px #3767B6;
-  background: #BBBDC050 5px center/3em no-repeat;
-  background-image: url("images/r-logo.png");
-  background-position: 0.5em 1.5em;
+  background: #BBBDC050 center no-repeat;
+  background-image: url("../../../../images/r-logo.png");
+  background-position: 0.5em 0.5em;
+  background-size: 50px;
 }
 
 .reveal .slide .python-box {
-  padding: 0.5em 1em 0.5em 1em;
+  padding: 0.5em 1em 0.5em 2.5em;
   margin-bottom: 6px;
   margin-top: 6px;
   border-left: solid 5px #5482B0;
-  background: #FADF6F50 5px center/3em no-repeat;
-  background-image: url("images/python-logo.png");
-  background-position: 0.5em 1.5em;
+  background: #FADF6F50 center no-repeat;
+  background-image: url("../../../../images/python-logo.png");
+  background-position: 0.5em 0.5em;
+  background-size: 50px;
+}
+
+.reveal .slide .code-box {
+  padding: 0.5em 1em 0.5em 2.5em;
+  margin-bottom: 6px;
+  margin-top: 6px;
+  border-left: solid 5px #797979;
+  background: #79797950 center no-repeat;
+  background-image: url("../../../../images/code-icon.png");
+  background-position: 0.5em 0.5em;
+  background-size: 50px;
 }
