Minor style adjustments

--- a/style/dark.scss
+++ b/style/dark.scss
@@ -3,7 +3,7 @@
 // Base document colors
 $body-bg: #181818;
 $body-color: white;
-$link-color: #9bcbac;
+$link-color: #bcd3d5;
 
 $light: #525252;
 
