--- a/style/quarto-conf.scss
+++ b/style/quarto-conf.scss
@@ -1,9 +1,9 @@
 /*-- scss:defaults --*/
 
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 $font-family: "Atkinson Hyperlegible", sans-serif;
-$link-color: #688773;
+$link-color: #589398;
 $hover-color: lighten($link-color, 40%);
 
 /*-- scss:rules --*/
