--- a/style/slides.scss
+++ b/style/slides.scss
@@ -71,6 +71,12 @@ details>summary {
   font-size: 3em
 }
 
+.reveal .hand-blue-large {
+  font-family: 'Gochi Hand', cursive;
+  color: #81A9D7;
+  font-size: 3em
+}
+
 .reveal .hand-green {
   font-family: 'Gochi Hand', cursive;
   color: #7A9857;
